# pygqlc

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENCE  MANIFEST.in  Pipfile  README.md  pull_request_template.md  pyproject.toml  setup.py
.github/workflows/: autodoc.yml  build-and-publish-pypi.yml  ci.yml  codeql.yml  python-check-outdated.yaml
docs/: conf.py  index.html  index.rst  pygqlc.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pygqlc.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pygqlc.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
pygqlc/: GraphQLClient.py  MutationBatch.py  MutationParser.py  QueryParser.py  SubscriptionParser.py  __init__.py  __main__.py  logging.py  version.py
pygqlc/helper_modules/: Singleton.py
tests/: conftest.py
tests/pygqlc/: mutations.py  queries.py  test_environments.py  test_helpers.py  test_mutate.py  test_query.py  test_query_one.py  test_subscribe.py
tests/pygqlc/gql_client/: mutations.py  queries.py  subscriptions.py  test_async.py  test_async_client_lifecycle.py  test_keepalive_expiry.py  test_mutate.py  test_query.py  test_query_one.py  test_subscribe.py  test_timeout_empty_message.py  test_transient_transport_retry.py
tests/pygqlc/gql_parsers/: queries.py  test_parser.py
