[tool.poetry]
name = "pygqlc"
version = "3.3.0"
description = "Python client for graphql APIs"
authors = ["Baruc Almaguer <baruc.almaguer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32"
pydash = "^8.0"
tenacity = "^9.0"
websocket-client = "^1.8"
certifi = "^2024.12.14"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pylint = "^3.3"
autopep8 = "^2.3"
setuptools = "^75.8"
wheel = "^0.45"
twine = "^6.1"
pytest-cov = "^6.0"
sphinx = "^8.1"
sphinx-rtd-theme = "^3.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."pygqlc/__version__.py"]
