[tool.poetry]
name = "pygqlc"
version = "3.5.2"
description = "Python client for graphql APIs"
authors = ["Baruc Almaguer <baruc.almaguer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydash = "^8.0"
tenacity = "^9.0"
websocket-client = "^1.8"
certifi = "^2025.1.31"
httpx = { extras = ["http2"], version = "^0.28.1" }
orjson = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25.0"
pylint = "^3.3"
autopep8 = "^2.3"
setuptools = "^76.0"
wheel = "^0.45"
twine = "^6.1"
pytest-cov = "^6.0"
sphinx = "^8.2"
sphinx-rtd-theme = "^3.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."pygqlc/__version__.py"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
