[project]
name = "pygqlc"
description = "Python client for graphql APIs"
readme = "README.md"
authors = [
    {name = "Baruc Almaguer", email = "baruc.almaguer@gmail.com"},
]
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "pydash>=8.0",
    "tenacity>=9.0",
    "websocket-client>=1.8",
    "httpx[http2]>=0.28",
    "orjson>=3.10",
]

[project.optional-dependencies]
valiotlogging = ["valiotlogging>=0.1.0,<2.0"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pylint>=3.3",
    "autopep8>=2.3",
    "setuptools>=76",
    "wheel>=0.45",
    "twine>=6.1",
    "sphinx>=8.2",
    "sphinx-rtd-theme>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pygqlc/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["pygqlc"]

[[tool.uv.index]]
name = "valiot"
url = "https://pypi.valiot.io/"
explicit = true

[tool.uv.sources]
valiotlogging = { index = "valiot" }

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
